--- a/public/legal-notice/index.html
+++ b/public/legal-notice/index.html
@@ -125,8 +125,8 @@
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
 					<a href="../" class="block text-gray-600 dark:text-gray-300">Home</a>
 					<a href="" class="block text-gray-600 dark:text-gray-300">Download</a>
-					<a href="" class="block text-gray-600 dark:text-gray-300">Update Log</a>
-					<a href="faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
+					<a href="/changelog/" class="block text-gray-600 dark:text-gray-300">Changelog</a>
+					<a href="/faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
 					<a href="" class="block text-gray-600 dark:text-gray-300">Contact Us</a>
 
 					<!-- mobile language button -->
@@ -161,7 +161,7 @@
 			<!-- heading -->
 			<header class="pt-32 xl:pt-36 pb-2 flex justify-center">
 				<span class="hidden lg:flex font-semibold lg:text-5xl text-gray-700 dark:text-yellow-500 transition duration-200">Legal Notice</span>
-				<span class="lg:hidden flex flex-col items-center text-5xl font-semibold text-gray-700 dark:text-yellow-500 transition duration-200 space-y-3">
+				<span class="lg:hidden flex flex-col items-center text-4xl font-semibold text-gray-700 dark:text-yellow-500 transition duration-200 space-y-3">
 					<p>Legal</p>
 					<p>Notice</p>
 				</span>
