modified homepage build text

--- a/public/index.html
+++ b/public/index.html
@@ -180,12 +180,14 @@
 					<!-- build text -->
 					<div id="latest-build-text" class="hidden group lg:flex rounded-lg max-h-[17rem] w-[27.5rem] cursor-default border-2 dark:border-[#444444] hover:border-transparent dark:hover:border-transparent hover:shadow-lg hover:bg-white dark:hover:bg-[#363636] transition-all duration-300">
 						<div class="mt-6 mb-[24px] ml-8 mr-2 pr-2 overflow-hidden group-hover:overflow-y-auto text-gray-400 dark:text-[#444444] group-hover:text-gray-800 dark:group-hover:text-gray-200 transition-all duration-300 relative">
-							<p class="font-semibold text-lg">Latest Build Info (0.6.3b)</p>
+							<h2 class="font-semibold text-lg">Latest Build Info (0.6.3b)</h2>
 							<br />
-							<p>
-								- Keymapping elements will resize on Window size change <br /><br />
-								- Special indicator will be shown on entering and leaving editor mode <br /><br />- All parent UIViews scaled properly ( Web announcements inside Genshin are fixed, some games as genshin currently requires to restart for proper scale after window change) <br /><br />- Fixed MenuBar that covered game window in Windowed mode <br /><br />- Resolved problem of not saving key mappings for some users <br /><br />- Fixed crash on entering party menu in Genshin Impact for some users <br /><br />- Improved graphics in 3x times <br /><br />- Total average memory usage by games decreased by x2 times <br /><br />- Fixed problem when camera movement vanished after cutscene <br /><br />- Camera now properly appears after mapping without additional manipulations <br /><br />- Now PlayCover contains automated crashes report system, which works not only inside app, but also every game converted with PlayCover <br /><br />- Started migrate games settings to PlayCover for synchronisation and easily management
-							</p>
+							<ul class="text-sm pl-4 space-y-4 list-outside list-disc">
+								<li>Keymapping elements will resize on Window size change</li>
+								<li>Special indicator will be shown on entering and leaving editor mode</li>
+								<li>All parent UIViews scaled properly ( Web announcements inside Genshin are fixed, some games as genshin currently requires to restart for proper scale after window change)</li>
+								<li>Fixed MenuBar that covered game window in Windowed mode</li>
+							</ul>
 						</div>
 					</div>
 				</div>
