modified changelog text and version spacing

--- a/public/changelog/index.html
+++ b/public/changelog/index.html
@@ -205,7 +205,7 @@
 							<!-- each release -->
 							<div class="flex flex-col">
 								<!-- version and date -->
-								<div class="flex space-x-5 items-center pb-1">
+								<div class="flex space-x-5 items-center pb-2">
 									<h2 class="text-yellow-500 font-medium text-xl">1.0.1</h2>
 									<p class="text-sm">(12-12-2021)</p>
 								</div>
@@ -217,6 +217,7 @@
 										<li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
 										<li>Lorem ipsum dolor sit.</li>
 										<li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam placeat itaque nulla.</li>
+										<li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex asperiores accusamus fuga! Corrupti tempore eaque dolores libero tenetur alias porro!</li>
 									</ul>
 								</div>
 							</div>
@@ -236,7 +237,7 @@
 							<!-- each release -->
 							<div class="flex flex-col">
 								<!-- version and date -->
-								<div class="flex space-x-5 items-center pb-1">
+								<div class="flex space-x-5 items-center pb-2">
 									<h2 class="font-medium text-xl">1.0.0</h2>
 									<p class="text-sm">(12-12-2021)</p>
 								</div>
@@ -371,7 +372,7 @@
 					<p class="">A PlayCover Team Product</p>
 					<a href="/legal-notice/" class="underline text-left inline pb-1 pt-2 md:pt-1 md:pb-0">Legal Notice</a>
 				</div>
-				<p class="inline md:pr-[5%]">2021 ProfiSpieler © (BeiJing) Culture Development. Co.Ltd. All rights reserved.</p>
+				<p class="inline md:pr-[5%]">2021 ProfiSpieler © (BeiJing) Culture Development. Co. Ltd. All rights reserved.</p>
 			</section>
 		</footer>
 
