modified background dark color of qs. on faq page

--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -172,7 +172,7 @@
                 <!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#242424] shadow dark:shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Keybindings Instructions</p>
 
 						<!-- arrow icon -->
@@ -228,7 +228,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#242424] shadow dark:shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">What is the supporter version of PlayCover?</p>
 
 						<!-- arrow icon -->
@@ -246,7 +246,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#242424] shadow dark:shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">When will the next version of Playcover be released?</p>
 
 						<!-- arrow icon -->
@@ -264,7 +264,7 @@
                 <!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#242424] shadow dark:shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Is there any step by step guide that I could follow?</p>
 
 						<!-- arrow icon -->
@@ -286,7 +286,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#242424] shadow dark:shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Do I have to disable SIP (System Integrity Protection) and is it safe to?</p>
 
 						<!-- arrow icon -->
@@ -304,7 +304,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#242424] shadow dark:shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">How can I change Genshin settings?</p>
 
 						<!-- arrow icon -->
@@ -322,7 +322,7 @@
                 <!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#242424] shadow dark:shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">How do I add mouse left or right clicks? </p>
 
 						<!-- arrow icon -->
@@ -340,7 +340,7 @@
                 <!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#242424] shadow dark:shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Camera movement is not working in games? </p>
 
 						<!-- arrow icon -->
@@ -361,7 +361,7 @@
                 <!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#242424] shadow dark:shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">I have followed all steps correctly as shown in the video but my keybindings still don't work? </p>
 
 						<!-- arrow icon -->
@@ -379,7 +379,7 @@
                 <!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#242424] shadow dark:shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">PlayCover is not working even though I did all the steps correctly (even troubleshoot says that my system is correct)? </p>
 
 						<!-- arrow icon -->
@@ -397,7 +397,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#242424] shadow dark:shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Do I have to reinstall Genshin Impact every PlayCover release?</p>
 
 						<!-- arrow icon -->
@@ -415,7 +415,7 @@
                 <!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#242424] shadow dark:shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">How do I reset the "sudo nvram boot-args..." command?</p>
 
 						<!-- arrow icon -->
@@ -437,7 +437,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#242424] shadow dark:shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Why do I see random text when I restart or switch my Mac on?</p>
 
 						<!-- arrow icon -->
@@ -466,7 +466,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#242424] shadow dark:shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">I can’t disable SIP or add boot-args because of a *blank password*?</p>
 
 						<!-- arrow icon -->
@@ -484,7 +484,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#242424] shadow dark:shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">I am getting "This application is not supported on this Mac" error?</p>
 
 						<!-- arrow icon -->
@@ -502,7 +502,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#242424] shadow dark:shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">I am getting "You do not have permission" error?</p>
 
 						<!-- arrow icon -->
@@ -536,7 +536,7 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#242424] shadow dark:shadow transition duration-200 cursor-pointer">
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-md border border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#2b2b2b] shadow dark:shadow transition duration-200 cursor-pointer">
 						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">My keybindings are acting all weird in Genshin Impact and restarting the app and Mac didn't help either?</p>
 
 						<!-- arrow icon -->
