modified keybindings instructions

--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -183,6 +183,8 @@
 
 					<!-- answer -->
 					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+                        <p class="pl-3 mb-10 border-l-4 rounded-sm border-yellow-500">Last updated for version 0.6.0b4.</p>
+                        
 						<ul class="list-inside list-disc">
                             <h2 class="text-xl font-bold">Keymapper Toggle</h2>
                             <li class=""><kbd>CTRL + P</kbd>&nbsp; →&nbsp; Toggle keymapping mode</li>
