--- a/public/index.html
+++ b/public/index.html
@@ -172,8 +172,8 @@
 
 						<!-- Download buttons -->
 						<div class="flex flex-col lg:flex-row space-y-4 lg:space-y-0 lg:space-x-4 pt-4 lg:pt-6 text-center">
-							<a class="py-2 px-4 drop-shadow-md bg-yellow-500 dark:bg-[#791c0c] text-white dark:text-gray-200 hover:bg-yellow-400 dark:hover:bg-[#8f220e] active:bg-yellow-700 dark:active:bg-[#6e1a0b] transition-colors duration-400 rounded-md cursor-pointer border-b-2 border-yellow-600 hover:border-yellow-500 active:border-yellow-700 dark:border-[#410e05] dark:active:border-[#6e1a0b]" href=""> Download for M1 Mac </a>
-							<a class="py-2 px-4 drop-shadow bg-gray-50 dark:bg-[#3f3f3f] text-gray-800 dark:text-gray-200 hover:bg-white dark:hover:bg-[#505050] active:bg-gray-100 dark:active:bg-[#2e2e2e] transition-colors duration-400 rounded-md cursor-pointer border-b-2 border-gray-200 hover:border-gray-200 active:border-gray-100 dark:border-[#2e2e2e] dark:active:border-[#2e2e2e]" href=""> Download for Intel Mac </a>
+							<a class="py-2 px-4 drop-shadow-sm bg-yellow-500 dark:bg-[#791c0c] text-white dark:text-gray-200 hover:bg-yellow-400 dark:hover:bg-[#8f220e] active:bg-yellow-700 dark:active:bg-[#6e1a0b] transition-colors duration-400 rounded-md cursor-pointer border-b-2 border-yellow-600 hover:border-yellow-500 active:border-yellow-700 dark:border-[#410e05] dark:active:border-[#6e1a0b]" href=""> Download for M1 Mac </a>
+							<a class="py-2 px-4 drop-shadow-sm bg-gray-50 dark:bg-[#3f3f3f] text-gray-800 dark:text-gray-200 hover:bg-white dark:hover:bg-[#505050] active:bg-gray-100 dark:active:bg-[#2e2e2e] transition-colors duration-400 rounded-md cursor-pointer border-b-2 border-gray-300 hover:border-gray-200 active:border-gray-100 dark:border-[#2e2e2e] dark:active:border-[#2e2e2e]" href=""> Download for Intel Mac </a>
 						</div>
 					</div>
 
