--- a/public/index.html
+++ b/public/index.html
@@ -156,6 +156,10 @@
 			</div>
 		</nav>
 
+		<!-- auto closer for lang menu -->
+		<!-- auto closer for lang menu -->
+		<div class="auto-closer hidden z-10 w-[100%] h-2 absolute"></div>
+
 		<!-- content -->
 		<main>
 			<!-- hero section -->
@@ -200,10 +204,10 @@
 		</main>
 
 		<!-- donate popup -->
-		<section class="hidden donate-popup z-40 fixed w-screen h-screen bg-[rgba(0,0,0,0.7)] dark:bg-[rgba(0,0,0,0.7)]">
+		<section class="hidden donate-wrapper donate-popup z-40 fixed w-screen h-screen bg-[rgba(0,0,0,0.7)] dark:bg-[rgba(0,0,0,0.7)]">
 			<!-- modal -->
 			<div class="w-screen h-screen flex flex-col items-center justify-center">
-				<div class="flex flex-col items-center lg:w-[30rem] bg-white dark:bg-[#1E1E1E] rounded-xl shadow">
+				<div class="donate-modal flex flex-col items-center lg:w-[30rem] bg-white dark:bg-[#1E1E1E] rounded-xl shadow">
 					<!-- close button -->
 					<div class="relative pt-4">
 						<button class="donate-close-button absolute top-5 lg:top-4 left-[7.5rem] lg:left-48">
@@ -321,5 +325,6 @@
 		<script src="js/mobile-buttons.js"></script>
 		<script src="js/dark-mode.js"></script>
 		<script src="js/donate-popup.js"></script>
+		<script src="js/auto-closer.js"></script>
 	</body>
 </html>
