--- a/public/index.html
+++ b/public/index.html
@@ -157,7 +157,6 @@
 		</nav>
 
 		<!-- auto closer for lang menu -->
-		<!-- auto closer for lang menu -->
 		<div class="auto-closer hidden z-10 w-[100%] h-2 absolute"></div>
 
 		<!-- content -->
@@ -175,9 +174,19 @@
 						<p class="md:pl-1 max-w-xs md:max-w-sm pt-6 md:pt-0 text-center md:text-left text-lg">An app that allows you to run iOS apps & games on M1 & Intel Mac with mouse, keyboard and controller support.</p>
 
 						<!-- Download buttons -->
-						<div class="flex flex-col lg:flex-row space-y-4 lg:space-y-0 lg:space-x-4 pt-4 lg:pt-6 text-center">
+						<div class="flex flex-col lg:flex-row space-y-6 lg:space-y-0 lg:space-x-4 pt-4 lg:pt-6 text-center">
+							<!-- M1 -->
 							<a class="py-2 px-4 drop-shadow-sm bg-yellow-500 dark:bg-[#791c0c] text-white dark:text-gray-200 hover:bg-yellow-400 dark:hover:bg-[#8f220e] active:bg-yellow-700 dark:active:bg-[#6e1a0b] transition-colors duration-400 rounded-md cursor-pointer border-b-2 border-yellow-600 hover:border-yellow-500 active:border-yellow-700 dark:border-[#410e05] dark:active:border-[#6e1a0b]" href=""> Download for M1 Mac </a>
-							<a class="py-2 px-4 drop-shadow-sm bg-gray-50 dark:bg-[#3f3f3f] text-gray-800 dark:text-gray-200 hover:bg-white dark:hover:bg-[#505050] active:bg-gray-100 dark:active:bg-[#2e2e2e] transition-colors duration-400 rounded-md cursor-pointer border-b-2 border-gray-300 hover:border-gray-200 active:border-gray-100 dark:border-[#2e2e2e] dark:active:border-[#2e2e2e]" href=""> Download for Intel Mac </a>
+
+							<!-- intel -->
+							<div class="flex items-center">
+								<a class="py-2 px-4 cursor-default bg-gray-200 dark:bg-[#272727] text-gray-400 dark:text-[#494949] transition-colors duration-400 rounded-md" href="#"> Download for Intel Mac </a>
+
+								<!-- coming soon text -->
+								<div class="relative text-gray-700 dark:text-gray-300">
+									<div class="absolute shadow text-[0.75rem] bg-yellow-300 dark:bg-[#4d4d4d] rounded-full py-[2px] right-[-2.5rem] bottom-[0.2rem] md:right-[-3.125rem] md:bottom-[0.5rem] transition duration-200"><p class="w-24 text-center">coming soon</p></div>
+								</div>
+							</div>
 						</div>
 					</div>
 
