--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -637,44 +637,38 @@
 			<!-- above line -->
 			<section class="flex md:items-end justify-between max-w-screen mx-auto pt-8 pl-[6%] md:pl-[5.1%] pr-16 md:pr-[5%] flex-col-reverse md:flex-row">
 				<!-- text -->
-				<div class="pt-6 md:pt-0">
+				<div class="pt-6 md:pt-0 flex flex-col space-y-1">
 					<!-- logo -->
-					<h1 class="pb-1 font-extrabold text-xl bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">PlayCover</h1>
-					<!-- legal text -->
-					<p class="max-w-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quisquam libero minima corrupti, ad sunt asperiores rem atque nihil quidem.</p>
+					<h1 class="font-medium text-lg bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">A PlayCover Team Product</h1>
+
+					<!-- legal notice -->
+					<a href="/legal-notice/" class="underline text-left inline md:pb-0">Legal Notice</a>
 				</div>
 
 				<!-- links -->
-				<div class="flex justify-between items-start flex-col mt-auto md:pt-0">
-					<h3 class="text-xl pb-4">Links</h3>
-					<!-- icons -->
-					<div class="flex space-x-5">
-						<!-- github -->
-						<a href="https://github.com/Letscoder/PlayCover" target="_blank" class="flex flex-col group">
-							<svg class="h-11 pb-1 md:pb-[0] fill-current text-gray-900 dark:text-gray-200" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 512 512"><path d="M256 5.3C114.6 5.3 0 120.4 0 262.3a257 257 0 00175.1 244c12.8 2.3 17.5-5.6 17.5-12.5l-.4-43.7C121 465.6 106 415.7 106 415.7 94.4 386 77.6 378 77.6 378c-23.3-16 1.7-15.7 1.7-15.7 25.7 1.9 39.2 26.5 39.2 26.5 22.8 39.3 60 28 74.5 21.4 2.3-16.6 9-28 16.3-34.4-56.9-6.5-116.6-28.5-116.6-127 0-28 10-51 26.3-69-2.6-6.5-11.4-32.6 2.5-68 0 0 21.5-6.9 70.4 26.4a244.2 244.2 0 01128.2 0C369 105 390.5 112 390.5 112c14 35.3 5.1 61.5 2.5 68 16.4 18 26.3 40.9 26.3 69 0 98.7-59.8 120.4-116.8 126.8 9.1 7.9 17.3 23.6 17.3 47.5 0 34.4-.3 62.1-.3 70.5 0 7 4.6 15 17.6 12.4A257 257 0 00512 262.4c0-142-114.6-257-256-257z" /></svg>
+				<div class="flex items-end space-x-5 md:pt-0">
+					<!-- github -->
+					<a href="https://github.com/Letscoder/PlayCover" target="_blank" class="flex flex-col group">
+						<svg class="h-9 pb-1 md:pb-[0] fill-current text-gray-900 dark:text-gray-200" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 512 512"><path d="M256 5.3C114.6 5.3 0 120.4 0 262.3a257 257 0 00175.1 244c12.8 2.3 17.5-5.6 17.5-12.5l-.4-43.7C121 465.6 106 415.7 106 415.7 94.4 386 77.6 378 77.6 378c-23.3-16 1.7-15.7 1.7-15.7 25.7 1.9 39.2 26.5 39.2 26.5 22.8 39.3 60 28 74.5 21.4 2.3-16.6 9-28 16.3-34.4-56.9-6.5-116.6-28.5-116.6-127 0-28 10-51 26.3-69-2.6-6.5-11.4-32.6 2.5-68 0 0 21.5-6.9 70.4 26.4a244.2 244.2 0 01128.2 0C369 105 390.5 112 390.5 112c14 35.3 5.1 61.5 2.5 68 16.4 18 26.3 40.9 26.3 69 0 98.7-59.8 120.4-116.8 126.8 9.1 7.9 17.3 23.6 17.3 47.5 0 34.4-.3 62.1-.3 70.5 0 7 4.6 15 17.6 12.4A257 257 0 00512 262.4c0-142-114.6-257-256-257z" /></svg>
 
-							<span class="group-hover:text-yellow-500 text-sm pt-1">GitHub</span>
-						</a>
-						<!-- discord -->
-						<a href="https://discord.gg/FYVuF6CNzP" target="_blank" class="flex flex-col group">
-							<img class="h-11 pb-1 md:pb-[0]" src="assets/discord.svg" alt="discord" />
-							<span class="group-hover:text-yellow-500 text-sm pt-1">Discord</span>
-						</a>
-					</div>
+						<span class="group-hover:text-yellow-500 text-sm pt-1">GitHub</span>
+					</a>
+
+					<!-- discord -->
+					<a href="https://discord.gg/FYVuF6CNzP" target="_blank" class="flex flex-col group">
+						<img class="h-9 pb-1 md:pb-[0]" src="assets/discord.svg" alt="discord" />
+						<span class="group-hover:text-yellow-500 text-sm pt-1">Discord</span>
+					</a>
 				</div>
 			</section>
 
 			<!-- line -->
 			<section class="w-100% flex justify-center">
-				<hr class="h-px my-6 w-[90%] bg-gray-300 dark:bg-gray-400 border-none" />
+				<hr class="h-px mt-4 mb-6 w-[90%] bg-gray-300 dark:bg-gray-400 border-none" />
 			</section>
 
 			<!-- below line -->
-			<section class="flex flex-col md:flex-row md:justify-between md:items-end space-y-1 md:space-y-0 pl-6 md:pl-0 pb-5">
-				<div class="flex flex-col md:pl-[5%]">
-					<p class="">A PlayCover Team Product</p>
-					<a href="/legal-notice/" class="underline text-left inline pb-1 pt-2 md:pt-1 md:pb-0">Legal Notice</a>
-				</div>
+			<section class="flex flex-col md:flex-row md:justify-center pl-6 md:pl-0 pb-5">
 				<p class="inline md:pr-[5%]">2021 ProfiSpieler © (BeiJing) Culture Development. Co. Ltd. All rights reserved.</p>
 			</section>
 		</footer>
