--- a/public/index.html
+++ b/public/index.html
@@ -184,7 +184,7 @@
 
 								<!-- coming soon text -->
 								<div class="relative text-gray-700 dark:text-gray-300">
-									<div class="transform rotate-12 absolute shadow text-[0.75rem] bg-yellow-300 dark:bg-green-800 rounded-full py-[2px] right-[-2.125rem] bottom-[0.2rem] md:right-[-1.8rem] md:bottom-[0.3rem] transition duration-200"><p class="w-24 text-center">coming soon</p></div>
+									<div class="transform rotate-12 absolute shadow text-[0.75rem] bg-yellow-300 dark:bg-green-800 rounded-full py-[2px] right-[-2.125rem] bottom-[0.2rem] md:right-[-1.8rem] md:bottom-[0.3rem] transition duration-200 cursor-default"><p class="w-24 text-center">coming soon</p></div>
 								</div>
 							</div>
 						</div>
