--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet" />
 	</head>
 
-	<body class="flex flex-col h-screen justify-between bg-gray-100 dark:bg-[#1E1E1E] font-montserrat transition duration-200 ease-in-out">
+	<body class="flex flex-col h-screen justify-between bg-gray-100 dark:bg-[#171717] font-montserrat transition duration-200 ease-in-out">
 		<!-- nav bar -->
 		<nav class="max-w-screen px-6 lg:pr-12 lg:pl-14 mx-auto py-3 lg:py-1 fixed w-screen top-0 bg-white dark:bg-[#141414] transition duration-200 ease-in-out filter drop-shadow-md z-20">
 			<div class="flex justify-between">
@@ -183,7 +183,7 @@
 								<a class="py-2 px-4 cursor-default bg-gray-200 dark:bg-[#272727] text-gray-400 dark:text-[#494949] transition-colors duration-200 rounded-md" href="#"> Download for Intel Mac </a>
 
 								<!-- coming soon text -->
-								<div class="relative text-gray-700 dark:text-gray-300">
+								<div class="relative text-gray-700 dark:text-gray-200">
 									<div class="transform rotate-12 absolute shadow text-[0.75rem] bg-yellow-300 dark:bg-green-800 rounded-full py-[2px] right-[-2.125rem] bottom-[0.2rem] md:right-[-1.8rem] md:bottom-[0.3rem] transition duration-200 cursor-default"><p class="w-24 text-center">coming soon</p></div>
 								</div>
 							</div>
