modified coming soon bg

--- a/public/index.html
+++ b/public/index.html
@@ -183,8 +183,8 @@
 								<a class="py-2 px-4 cursor-default bg-gray-200 dark:bg-[#272727] text-gray-400 dark:text-[#494949] transition-colors duration-200 rounded-md" href="#"> Download for Intel Mac </a>
 
 								<!-- coming soon text -->
-								<div class="relative text-gray-700 dark:text-gray-200">
-									<div class="transform rotate-12 absolute shadow text-[0.75rem] bg-yellow-300 dark:bg-green-800 rounded-full py-[2px] right-[-2.125rem] bottom-[0.2rem] md:right-[-1.8rem] md:bottom-[0.3rem] transition duration-200 cursor-default"><p class="w-24 text-center">coming soon</p></div>
+								<div class="relative text-gray-50 dark:text-gray-200">
+									<div class="transform rotate-12 absolute shadow text-[0.75rem] bg-green-600 dark:bg-green-800 rounded-full py-[2px] right-[-2.125rem] bottom-[0.2rem] md:right-[-1.8rem] md:bottom-[0.3rem] transition duration-200 cursor-default"><p class="w-24 text-center">coming soon</p></div>
 								</div>
 							</div>
 						</div>
