--- a/public/index.html
+++ b/public/index.html
@@ -184,22 +184,30 @@
 
 								<!-- coming soon text -->
 								<div class="relative text-gray-50 dark:text-gray-200">
-									<div class="transform rotate-12 absolute shadow text-[0.75rem] bg-green-600 dark:bg-green-800 rounded-full py-[2px] right-[-2.125rem] bottom-[0.2rem] md:right-[-1.8rem] md:bottom-[0.3rem] transition duration-200 cursor-default"><p class="w-24 text-center">coming soon</p></div>
+									<div class="transform rotate-12 absolute shadow text-[0.75rem] bg-green-600 dark:bg-green-800 rounded-full py-[2px] right-[-2.125rem] bottom-[0.2rem] md:right-[-1.4rem] md:bottom-[0.45rem] transition duration-200 cursor-default"><p class="w-24 text-center">coming soon</p></div>
 								</div>
 							</div>
 						</div>
 					</div>
 
 					<!-- build text -->
-					<div id="latest-build-text" class="hidden group lg:flex rounded-lg max-h-[17rem] w-[27.5rem] cursor-default border-2 dark:border-[#444444] hover:border-transparent dark:hover:border-transparent hover:shadow-lg hover:bg-white dark:hover:bg-[#363636] transition-all duration-300">
-						<div class="mt-6 mb-[24px] ml-8 mr-2 pr-2 overflow-hidden group-hover:overflow-y-auto text-gray-400 dark:text-[#444444] group-hover:text-gray-800 dark:group-hover:text-gray-200 transition-all duration-300 relative">
-							<h2 class="font-semibold text-lg">Latest Build Info (0.6.3b)</h2>
-							<br />
-							<ul class="text-sm pl-4 space-y-4 list-outside list-disc">
-								<li>Keymapping elements will resize on Window size change</li>
+					<div id="latest-build-text" class="hidden group lg:flex rounded-lg max-h-[17rem] w-[27.5rem] cursor-default border-2 dark:border-[#303030] hover:border-transparent dark:hover:border-transparent hover:shadow-lg hover:bg-white dark:hover:bg-[#363636] transition-all duration-300">
+						<div class="mt-6 mb-[24px] ml-8 mr-2 pr-4 overflow-hidden group-hover:overflow-y-auto text-gray-400 dark:text-[#444444] group-hover:text-gray-800 dark:group-hover:text-gray-200 transition-all duration-300 relative">
+							<h2 class="font-medium text-lg pb-4">Latest Update Info (0.6.2)</h2>
+
+							<ul class="text-sm space-y-4">
+								<li>Keymapping elements will resize on window size change</li>
 								<li>Special indicator will be shown on entering and leaving editor mode</li>
-								<li>All parent UIViews scaled properly ( Web announcements inside Genshin are fixed, some games as genshin currently requires to restart for proper scale after window change)</li>
+								<li>All parent UIViews scale properly (web announcements inside Genshin Impact are fixed, some games as such as Genshin Impact currently require restarting for proper scale after window change)</li>
 								<li>Fixed MenuBar that covered game window in Windowed mode</li>
+								<li>Resolved problem of not saving key mappings for some users</li>
+								<li>Fixed crash on entering party menu in Genshin Impact for some users</li>
+								<li>Improved graphics in 3x times</li>
+								<li>Total average memory usage by games decreased by x2 times</li>
+								<li>Fixed problem when camera movement vanished after cutscene</li>
+								<li>Camera now properly appears after mapping without additional manipulations</li>
+								<li>Now PlayCover contains automated crashes report system, which works not only inside app, but also every game converted with PlayCover</li>
+								<li>Started migrate games settings to PlayCover for syncing and easily management</li>
 							</ul>
 						</div>
 					</div>
