--- a/public/index.html
+++ b/public/index.html
@@ -176,7 +176,7 @@
 						<!-- Download buttons -->
 						<div class="flex flex-col lg:flex-row space-y-6 lg:space-y-0 lg:space-x-4 pt-4 lg:pt-6 text-center">
 							<!-- M1 -->
-							<a class="py-2 px-4 drop-shadow-sm bg-yellow-500 dark:bg-[#791c0c] text-white dark:text-gray-200 hover:bg-yellow-400 dark:hover:bg-[#8f220e] active:bg-yellow-700 dark:active:bg-[#6e1a0b] transition-colors duration-400 rounded-md cursor-pointer border-b-2 border-yellow-600 hover:border-yellow-500 active:border-yellow-700 dark:border-[#410e05] dark:active:border-[#6e1a0b]" href=""> Download for M1 Mac </a>
+							<a class="py-2 px-4 drop-shadow-sm bg-yellow-500 dark:bg-[#791c0c] text-white dark:text-gray-200 hover:bg-yellow-400 dark:hover:bg-[#8f220e] active:bg-yellow-700 dark:active:bg-[#6e1a0b] transition-colors duration-400 rounded-md cursor-pointer border-b-2 border-yellow-600 hover:border-yellow-500 active:border-yellow-700 dark:border-[#410e05] dark:active:border-[#6e1a0b]" href="https://github.com/Letscoder/PlayCover/releases/download/0.6.2/PlayCover.0.6.2.zip"> Download for M1 Mac </a>
 
 							<!-- intel -->
 							<div class="flex items-center">
