--- a/public/index.html
+++ b/public/index.html
@@ -162,7 +162,7 @@
 		<!-- content -->
 		<main>
 			<!-- hero section -->
-			<section id="hero-content" class="flex flex-col items-center lg:items-start lg:flex-row justify-center space-y-10 lg:space-y-0 lg:space-x-40 pt-28 pb-10 lg:mt-auto">
+			<section id="hero-content" class="flex flex-col items-center lg:items-start lg:flex-row justify-center space-y-10 lg:space-y-0 lg:space-x-36 pt-28 pb-10 lg:mt-auto">
 				<!-- text -->
 				<div id="hero-text" class="flex flex-col space-y-6">
 					<!-- intro text -->
@@ -193,7 +193,7 @@
 					<!-- build text -->
 					<div id="latest-build-text" class="hidden group lg:flex rounded-lg max-h-[17rem] w-[27.5rem] cursor-default border-2 dark:border-[#303030] hover:border-transparent dark:hover:border-transparent hover:shadow-lg hover:bg-white dark:hover:bg-[#363636] transition-all duration-300">
 						<div class="mt-6 mb-[24px] ml-8 mr-2 pr-4 overflow-hidden group-hover:overflow-y-auto text-gray-400 dark:text-[#444444] group-hover:text-gray-800 dark:group-hover:text-gray-200 transition-all duration-300 relative">
-							<h2 class="font-medium text-lg pb-4">Latest Update Info (0.6.2)</h2>
+							<h2 class="font-medium text-lg pb-4">Latest Update Info (0.6.3)</h2>
 
 							<ul class="text-sm space-y-4">
 								<li>Keymapping elements will resize on window size change</li>
@@ -215,7 +215,8 @@
 
 				<!-- image -->
 				<div id="hero-image">
-					<img class="max-w-xs md:max-w-sm rounded shadow" src="assets/screenshot-1.jpeg" alt="genshin-impact" />
+					<img class="dark:hidden max-w-xs md:max-w-[27rem] rounded-lg drop-shadow-lg" src="assets/playcover-screenshot-light.png" alt="genshin-impact" />
+					<img class="hidden dark:block max-w-xs md:max-w-[27rem] rounded-lg drop-shadow-lg" src="assets/playcover-screenshot-dark.png" alt="genshin-impact" />
 				</div>
 			</section>
 		</main>
