--- a/public/index.html
+++ b/public/index.html
@@ -184,7 +184,7 @@
 
 								<!-- coming soon text -->
 								<div class="relative text-gray-50 dark:text-gray-200">
-									<div class="transform rotate-12 absolute shadow text-[0.75rem] bg-green-600 dark:bg-green-800 rounded-full py-[2px] right-[-2.125rem] bottom-[0.2rem] md:right-[-1.4rem] md:bottom-[0.45rem] transition duration-200 cursor-default"><p class="w-24 text-center">coming soon</p></div>
+									<div class="transform rotate-12 absolute shadow text-[0.75rem] bg-gray-400 dark:bg-[#353535] rounded-full py-[2px] right-[-2.125rem] bottom-[0.2rem] md:right-[-1.4rem] md:bottom-[0.45rem] transition duration-200 cursor-default"><p class="w-24 text-center">coming soon</p></div>
 								</div>
 							</div>
 						</div>
@@ -213,10 +213,18 @@
 					</div>
 				</div>
 
-				<!-- image -->
+				<!-- hero image -->
 				<div id="hero-image">
-					<img class="dark:hidden max-w-xs md:max-w-[27rem] rounded-lg drop-shadow-lg" src="assets/playcover-screenshot-light.png" alt="genshin-impact" />
-					<img class="hidden dark:block max-w-xs md:max-w-[27rem] rounded-lg drop-shadow-lg" src="assets/playcover-screenshot-dark.png" alt="genshin-impact" />
+					<div class="relative">
+						<div class="absolute dark:hidden animate-blob opacity-30 dark:opacity-5 mix-blend-multiply filter blur-xl top-10 -left-4 rounded-full bg-purple-300 h-56 w-56 md:h-[20rem] md:w-[20rem]"></div>
+
+						<div class="absolute dark:hidden overflow-hidden animate-blob animation-delay-2000 opacity-30 dark:opacity-5 mix-blend-multiply filter blur-xl rounded-full top-10 md:top-20 right-20 md:-right-2 bg-yellow-300 h-56 w-56 md:h-[20rem] md:w-[20rem]"></div>
+
+						<div class="absolute dark:hidden overflow-hidden animate-blob animation-delay-4000 opacity-30 dark:opacity-5 mix-blend-multiply -bottom-7 left-4 filter blur-xl rounded-full bg-pink-300 h-56 w-56 md:h-[20rem] md:w-[20rem]"></div>
+
+						<img class="dark:hidden max-w-xs md:max-w-[27rem] rounded-lg drop-shadow-md" src="assets/playcover-screenshot-light.png" alt="genshin-impact" />
+						<img class="hidden dark:block max-w-xs md:max-w-[27rem] rounded-lg drop-shadow-md" src="assets/playcover-screenshot-dark.png" alt="genshin-impact" />
+					</div>
 				</div>
 			</section>
 		</main>
